--- a/app/views/bitcoins/index.html.erb
+++ b/app/views/bitcoins/index.html.erb
@@ -1,3 +1,13 @@
+<p>
+How many bitcoins do you have?
+</p>
+
+<form action="/bitcoins">
+  <input type="text" name="amount">
+  <button>Submit</button>
+
+</form>
+
 <p>You have <%= @bitcoin %> Bitcoin.</p>
 <p>1 Bitcoin is valued at $<%= @usd_rate %> USD.</p>
 <p>Your Bitcoin is worth $<%= @usd_value %>.</p>
