--- a/app/views/bitcoins/index.html.erb
+++ b/app/views/bitcoins/index.html.erb
@@ -3,7 +3,7 @@ How many bitcoins do you have?
 </p>
 
 <form action="/bitcoins">
-  <input type="text" name="amount">
+  <input type="text" name="amount" value="<%=@bitcoin%>">
   <button>Submit</button>
 
 </form>
