--- a/app/views/companies/show.html.erb
+++ b/app/views/companies/show.html.erb
@@ -1,8 +1,8 @@
 <!-- Company details page -->
 
-<h1>Dunder Mifflin</h1>
+<h1><%=@company["name"]%></h1>
 
-<h2>Scranton, PA</h2>
+<h2><%=@company["city"]%>,<%= @company["state"]%> </h2>
 
 <h3>Contacts</h3>
 
@@ -10,6 +10,7 @@
   <li>Michael Scott</li>
   <li>Dwight Schrute</li>
 </ul>
+
 
 <p>
   <a href="">New Contact</a>
